# AI4Juris

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
IA/: pyproject.toml
IA/agent/: agent.py  chat_prompt.md  files.json  prompt.md  prompt_decision.md  random_files.py  splitter.py  test.txt  tools.py
IA/dgsi_scraper/: README.md  decision_clean.py  decision_examples_export.py  decision_ids_by_class.py  decision_mapping_stats.py  decision_rank.py  index_embeddings_for_ids.py  knn_eval_from_db.py  retriever.py  scrape.py
IA/kmeans/: README.md  kmeans_from_db.py
IA/knn/: README.md  knn_predict_from_file.py
IA/serving/: Dockerfile  app.py
IA/tfidf_svm/: README.md  test_NEGADA.txt  tfidf_svm_eval_from_db.py  tfidf_svm_predict_from_file.py  train_tfidf_svm.py
agent/: agent.py  decision_ids_by_class_ALLSOURCES.json  decision_table.py  prompt.md  splitter.py  tools.py
backend/: Dockerfile  Procfile  db.sqlite3  docker-compose.yml  entrypoint.sh  requirements.txt  seed.py
backend/api/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/config/: settings.py  urls.py
dgsi-scraper/: README.md  pyproject.toml  requirements.txt  retriever.py  scrape.py  splitter.py
dgsi_scraper/: README.md  decision_clean.py  decision_examples_export.py  decision_map_llm.py  decision_mapping_stats.py  decision_rank.py  decision_unsure_division.py  retriever.py
frontend/: .env.production  Dockerfile  package.json  vite.config.js
serving/: Dockerfile  app.py
(+36 files in other folders)
