[project]
name = "dgsi-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.3.22",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "lxml>=6.0.2",
    "numpy>=2.4.0",
    "ollama>=0.6.1",
    "psycopg[binary]>=3.3.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
