[project]
name = "ai4juris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agno>=2.3.21",
    "fastapi>=0.128.0",
    "numpy>=2.2.6",
    "ollama>=0.6.1",
    "psycopg[binary]>=3.3.2",
    "sentence-transformers>=5.2.0",
]
